# nxarray

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml  main.yaml
nxarray/: __init__.py
nxarray/src/: nxarray.py
src/nxarray/: __init__.py  core.py  linalg.py
tests/: run_tests.sh  test_autogen.py  test_autogen.yaml  test_manual.py
tests/testgen/: testgen.cabal
tests/testgen/app/: Cli.hs  CodeGen.hs  Config.hs  ExprTree.hs  Main.hs
