[tool.poetry]
name = "nxarray"
version = "0.0.1"
description = "Arrays with named axes for easy tensor networks programming"
authors = ["Ilia Luchnikov <luchnikovilya@gmail.com>"]
packages = [{ include = "nxarray", from = 'src' }]

[tool.poetry.dependencies]
python = ">=3.10" 
numpy = "^2"
ordered-set = "^4"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
black = "^25"

[tool.mypy]
mypy_path = "src"

[tool.black]
line-length = 80
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
