cabal-version:      3.0
name:               testgen
version:            0.1.0.0
author:             Ilia Luchnikov
maintainer:         luchnikovilya@gmail.com
build-type:         Simple
common warnings
    ghc-options: -Wall
executable testgen
    import:           warnings
    main-is:          Main.hs
    other-modules:    ExprTree, CodeGen, Config, Cli
    build-depends:    base ^>=4.17.2.1, random, mtl, filepath, directory, yaml, optparse-applicative, bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
    
